# schedulon

./: CHANGELOG.md  LICENSE  MANIFEST.json  README.md  alembic.ini  pyproject.toml  requirements-ci.txt
.github/workflows/: python-package.yml
deploy/bundle/: install_prod_bundle.sh
deploy/checks/: docker_seed_demo_check.sh  security_check.sh  smoke_test.sh  validate_supervision_stack.sh
deploy/docker/prod/: Dockerfile  docker-compose.yml
deploy/docker/prod-lab/: docker-compose.telegraf-influx-grafana.yml
deploy/examples/: haproxy.env  ldap.env.example  patroni-node.env  schedulon.env.example
deploy/haproxy/: haproxy.cfg.tpl
deploy/helm/schedulon/: Chart.yaml  values.yaml
deploy/monitoring/telegraf/: telegraf.conf
deploy/scripts/: bootstrap_db.sh  dry_run.sh  init_db.sh  preflight_check.sh  recover_cluster.sh  rollback.sh
deploy/systemd/: schedulon-api.service  schedulon-scheduler.service  schedulon-worker.service
docs/: architecture.md  authentication-ldap.md  backup-pitr.md  change-standardization.md  day2-operations.md  deployment.md  failover-recovery.md  governance-controls.md  operator-runbook.md  production-checklist.md  production-readiness.md  security-hardening.md  supervision.md
examples/api/: 01-seed-demo.sh  02-list-jobs.sh  03-trigger-first-job.sh  04-report.sh
src/schedulon/: __main__.py
tests/integration/: test_smoke_contract.py
tests/security/: test_ldap_allowed_groups.py
tests/unit/: test_app_routes.py  test_python39_annotations.py  test_rbac.py  test_seed_demo_ordering.py  test_settings.py  test_templates.py  test_tokens.py
(+60 files in other folders)
