[project]
name = "schedulon"
version = "1.0.3"
description = "Production-ready distributed job scheduler and orchestration control plane"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.9",
  "rich>=13.7",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "eval-type-backport>=0.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "ldap3>=2.9",
  "httpx>=0.27",
  "pyyaml>=6.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0",  "flake8>=7.0", "ruff>=0.3", "bandit>=1.7", "pip-audit>=2.7"]
[project.scripts]
schedulon = "schedulon.__main__:main"
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
